Enhance UserService with email validation and password hashing
Added email existence check and password hashing in user creation and update methods.