@@ -4,67 +4,77 @@ import com.atlas.erp.dto.CreateUserRequest;
 import com.atlas.erp.dto.UpdateUserRequest;
 import com.atlas.erp.dto.UserDTO;
 import com.atlas.erp.entity.User;
+import com.atlas.erp.exception.EmailAlreadyExistsException;
 import com.atlas.erp.exception.ResourceNotFoundException;
 import com.atlas.erp.repository.UserRepository;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
 
     private final UserRepository userRepository;
+    private final PasswordEncoder passwordEncoder;
 
-    public UserService(UserRepository userRepository) {
+    public UserService(UserRepository userRepository, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
+        this.passwordEncoder = passwordEncoder;
     }
 
     public UserDTO createUser(CreateUserRequest request) {
-    User user = new User();
-    user.setName(request.getName());
-    user.setEmail(request.getEmail());
-    user.setPassword(request.getPassword());
+        if (userRepository.findByEmail(request.getEmail()).isPresent()) {
+            throw new EmailAlreadyExistsException("Email already in use: " + request.getEmail());
+        }
 
-    User saved = userRepository.save(user);
-    return toDTO(saved);
-}
+        User user = new User();
+        user.setName(request.getName());
+        user.setEmail(request.getEmail());
+        user.setPassword(passwordEncoder.encode(request.getPassword())); // 🔒 hash BCrypt
 
+        User saved = userRepository.save(user);
+        return toDTO(saved);
+    }
 
     public List<UserDTO> getAllUsers() {
         return userRepository.findAll()
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList(); // Java 17+
     }
 
     public UserDTO getUserById(Long id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
 
         return toDTO(user);
     }
 
     public UserDTO updateUser(Long id, UpdateUserRequest request) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
 
-    User user = userRepository.findById(id)
-            .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+        // Verifica se o novo email já pertence a outro usuário
+        userRepository.findByEmail(request.getEmail())
+                .filter(existing -> !existing.getId().equals(id))
+                .ifPresent(existing -> {
+                    throw new EmailAlreadyExistsException("Email already in use: " + request.getEmail());
+                });
 
-    user.setName(request.getName());
-    user.setEmail(request.getEmail());
+        user.setName(request.getName());
+        user.setEmail(request.getEmail());
 
-    User updated = userRepository.save(user);
-    return toDTO(updated);
+        User updated = userRepository.save(user);
+        return toDTO(updated);
     }
 
     public void deleteUser(Long id) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
 
-    User user = userRepository.findById(id)
-            .orElseThrow(() -> new ResourceNotFoundException("User not found"));
-
-    userRepository.delete(user);
-}
+        userRepository.delete(user);
+    }
 
     private UserDTO toDTO(User user) {
         return new UserDTO(
